--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 # Dependency directories
 node_modules/
 jspm_packages/
+Basic_authentication/api/v1/views/__pycache__/index.cpython-310.pyc
+Basic_authentication/api/v1/__pycache__/app.cpython-310.pyc
